  convert from a pre-1.0 backup repository, and haven't done so yet,
  please use Obnam version 1.6.1 or earlier to do so.

* A new `backup-finished` hook is provided by the backup plugin, so
  that other plugins may do processing at the end of a backup, such as
  report the successful backup to a monitoring system. Patch by
  Enrico Tröger.

Bug fixes:

* Obnam now creates a `trustdb.gpg` in the temporary GNUPGHOME it uses
  during encryption operations. From version 2.0.22 (or thereabouts),
  `gpg` insists on having a `trustdb.gpg` in the GNUPGHOME it uses.

Version 1.6.1, released 2013-11-30
----------------------------------

* Fix Debian package dependencies correctly.

Version 1.6, released 2013-11-30
--------------------------------

* Stop logging paramiko exceptions that get converted into another
  type of exception by the SFTP plugin in Obnam.

* `obnam-benchmark` can now use an installed version of larch.
  Patch by Lars Kruse.

* Obnam has been ported to FreeBSD by Itamar Turner-Trauring
  of HybridCluster.

* Backup progress reporting now reports scanned file data, not just
  backed up file data. This will hopefully be less confusing to people.

* The `list-keys`, `client-keys`, and `list-toplevels` commands now
  obey a new option, `--key-details`, to show the usernames attached
  to each public key. Patch by Lars Kruse.

* New option `--ssh-command` to set the command Obnam runs
  when invoking ssh. patch by Lars Kruse.

* `obnam clients` can now be used without being an existing client.
  Patch by Itamar Turner-Trauring.

* New option `--ssh-host-keys-check` to better specify how SSH
  host keys should be checked. Patch by Itamar Turner-Trauring.

Bug fixes:

* Fix`"obnam list-toplevels` so it doesn't give an error when it's
  unable to read the per-client directory of another client, when
  encryption is used. Fix by Lars Kruse.

* Fix the encryption plugin to give a better error message when it